# research_ai-usage-in-science

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pipeline.bash  pyproject.toml
aius/countDocumentsPerScientificDomain/: inference.py
aius/createZettels/: __init__.py
aius/downloadPapers/: __init__.py  main.py  plos.py  science.py
aius/extractArticleFeatures/: nature.py
aius/search/: __init__.py  htmlConversion.py  main.py  nature.py  plos.py  science.py
aius/search_/: __init__.py  nature.py  plos.py
captureRSSFeeds/utils/: fs.py
data/: README.md
identifySubjournals/: frontiersin.py
lrac/: README.md  main.py  rss.py
lrac/classes/: downloader.py  journals.py  parser.py
lrac/classifyDocumentScientificDiscipline/: gptInterface.py
lrac/countDataServices/: science.py
lrac/countDocumentsPerScientificDomain/: getDomains.py  inference.py  plos.py  systemPrompt.txt  tokenizer.py
lrac/countDocumentsPerTopic/: nature.py  plos.py  science.py
lrac/createSearchQueries/: plos.py
lrac/createZettels/: __init__.py  classifyDocuments.py  science.py
lrac/db/: schema.py
lrac/downloadArticles/: plos.py  science.py
lrac/extractArticleFeatures/: nature.py
lrac/frontiersin/: main.py  parser.py
lrac/nature/: __init__.py  main.py  parser.py
lrac/plos/: main.py
lrac/science/: main.py
lrac/searchSources/: plos.py
lrac/utils/: fs.py  metaprogramming.py
models/: Modelfile  findHash.py
ollama/: gemma.Modelfile  gemma2.Modelfile  llama2.Modelfile  llama3.1.Modelfile  llama3.Modelfile
scripts/: 0a_analyzeJournalSearchResults.py  extractPaperURLsFromSearchResults.py  oaTopicAnalysis.py  parquet2html.py  pickle2parquet.py  plos_URL2DOI.py  plot_ManualSampleKeywords_1.py  plot_PLOSResultsPerYearPerKeyword.py  plot_PLOSSearchResultsProportionToTotalPerYear.py  scopusTable.py
search/: science.py
src/: 0_searchJournal.py  0a_analyzeJournalSearchResults.py  1_queryOA.py  2_filterDocs.py  NOTES.md  README.md  __init__.py  copyrun.bash  db.py  extractDocuments.py  filterDocuments.py  main.py  run.bash  sampleDocuments.py  searchFunc.py  searchJournal.py  searchJournals.py
src-docs/: src.classifyZettels.main.rst  src.classifyZettels.rst  src.createZettels.main.rst  src.createZettels.rst  src.downloadPapers.main.rst  src.downloadPapers.nature.rst  src.downloadPapers.plos.rst  src.downloadPapers.rst  src.downloadPapers.science.rst  src.journals.nature.rst  src.journals.plos.rst  src.journals.rst  src.journals.science.rst  src.rst  src.searchForPapers.main.rst  src.searchForPapers.rst  src.utils.rst  src.utils.search.rst
src/_countDataServices/: science.py
src/_countDocumentsPerScientificDomain/: inference.py  tokenizer.py
src/_createZettels/: classifyDocuments.py  science.py
src/_extractArticleFeatures/: nature.py
src/_identifyFeeds/: frontiersin.py  nature.py
src/classes/: __init__.py  journalGeneric.py  journalOfEngineering.py.py  openalex.py  peerj.py  plos.py  royalsociety.py  sage.py  sageOpen.py  search.py  springerOpen.py
src/classifyZettels/: HTMLTags.py  __init__.py  countSeachQueriesZ.py  countSearchQueriesHTML.py  extractSourcePLOS.py  main.py  openAlexTags.py  scopusTable.py  zettelSearchQueries.py
src/createZettels/: classifyDocuments.py  main.py  science.py
src/download/: main.py  nature.py
src/downloadDocuments/: nature.py
src/downloadPapers/: __init__.py  main.py  nature.py  plos.py  science.py
src/filter/: __init__.py  main.py
src/journals/: __init__.py  (+4 more)
utilities/: journal2class.py  nature.py  plos.py
worked-example/: checkCitations.py  common.py  filterData_plos.py  getData_plos.py  openSamples.py  openSamples_py.py  plot.py  run.bash  sample.py
(+125 files in other folders)
