[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
progress = "^1.6"
requests = "^2.31.0"
click = "^8.1.7"
bs4 = "^0.0.2"
lxml = "^5.1.0"
pyfs = {git = "https://github.com/NicholasSynovic/python-fs-utils"}
zettelgeist = "^1.1.5"
typedframe = "^0.11.0"
pyarrow = "^16.1.0"

langchain = "^0.2.7"
langchain-core = "^0.2.12"
langchain-community = "^0.2.7"
[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aius-search = "src.search.main:main"
aius-search-html-conversion = "src.search.htmlConversion:main"
aius-download-papers = "src.downloadPapers.main:main"
