[tool.poetry]
name = "src"
version = "0.1.0"
description = "Tooling to support the analysis of AI usage within scientific domains"
license = "GNU AFFERO"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/NicholasSynovic/research_ai-usage-in-science"
repository = "https://github.com/NicholasSynovic/research_ai-usage-in-science"
keywords = ["research", "AI", "software engineering", "science"]
classifiers = ["Development Status :: 3 - Alpha"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
progress = "^1.6"
requests = "^2.31.0"
click = "^8.1.7"
bs4 = "^0.0.2"
lxml = "^5.1.0"
zettelgeist = "^1.1.5"
typedframe = "^0.11.0"
pyarrow = "^16.1.0"
langchain = "^0.2.7"
langchain-core = "^0.2.12"
langchain-community = "^0.2.7"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
ollama = "^0.3.1"
langchain-ollama = "^0.1.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aius-search = "src.search.main:main"
aius-search-plot = "src.search.plot:main"
aius-filter-search-results = "src.filter.main:main"
aius-download-papers = "src.download.main:main"
aius-transform-papers = "src.transform.main:main"
aius-evaluation-count-keywords = "src.evaluation.countKeywords.main:main"
aius-evaluation-plot-keywords = "src.evaluation.countKeywords.plot:main"
aius-evaluation-count-tags = "src.evaluation.countTags.main:main"
aius-evaluation-plot-tags = "src.evaluation.countTags.plot:main"
aius-ollama-filter-search-results = "src.ollamaFilter.main:main"
